welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:15: error: not found: type color
def hunt(c: color) {
            ^SlugSnail:2: error: not found: type color
def isFacingTrail(c: color ):Boolean = {
                     ^SlugSnail:5: error: value c is not a member of object java.awt.Color
    if (getCouleurSol()==Color.c){
                               ^